@@ -1,27 +1,0 @@
-sudo: required
-
-dist:
-  - bionic
-
-addons:
-  apt:
-    packages:
-    - libgd-dev
-language: perl
-
-perl:
-  - "5.26-shrplib"
-
-env:
-  global:
-    - WTSI_NPG_GITHUB_URL=https://github.com/wtsi-npg
-    - WTSI_NPG_CONDA_REPO=https://dnap.cog.sanger.ac.uk/npg/conda/prod/generic
-
-install:
-  - ./scripts/travis_install.sh
-
-script:
-  - PATH=/home/travis/miniconda/samtools/bin:/home/travis/miniconda/baton/bin:$PATH
-  - cpanm --quiet --notest --installdeps .
-  - export TEST_AUTHOR=1
-  - perl Build.PL && ./Build test --verbose
