@@ -9,6 +9,7 @@ LIST OF CHANGES
    it would have returned false. This is done in order to allow for
    archival of products which either passes QC or have never been through
    manual or robo QC.
+ - Use GitHub actions for CI in place of Travsi-CI
 
 release 59.1.0
  - More options for defining wr limit groups: allow an exact match
